fix(err):tsoa route generation
