# server/public/swagger.json
@@ -6,7 +6,43 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {},
+		"schemas": {
+			"ObjectLiteral": {
+				"description": "Interface of the simple literal object with any string keys.",
+				"properties": {},
+				"type": "object",
+				"additionalProperties": {}
+			},
+			"InsertResult": {
+				"description": "Result object returned by InsertQueryBuilder execution.",
+				"properties": {
+					"identifiers": {
+						"items": {
+							"$ref": "#/components/schemas/ObjectLiteral"
+						},
+						"type": "array",
+						"description": "Contains inserted entity id.\nHas entity-like structure (not just column database name and values)."
+					},
+					"generatedMaps": {
+						"items": {
+							"$ref": "#/components/schemas/ObjectLiteral"
+						},
+						"type": "array",
+						"description": "Generated values returned by a database.\nHas entity-like structure (not just column database name and values)."
+					},
+					"raw": {
+						"description": "Raw SQL result returned by executed query."
+					}
+				},
+				"required": [
+					"identifiers",
+					"generatedMaps",
+					"raw"
+				],
+				"type": "object",
+				"additionalProperties": false
+			}
+		},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -18,6 +54,40 @@
 		"contact": {}
 	},
 	"paths": {
+		"/users/profile": {
+			"get": {
+				"operationId": "GetJohn",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"surname": {
+											"type": "string"
+										},
+										"name": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"surname",
+										"name"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/users/user": {
 			"post": {
 				"operationId": "RegisterUser",
@@ -26,7 +96,9 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/InsertResult"
+								}
 							}
 						}
 					}
@@ -44,26 +116,6 @@
 						}
 					}
 				}
-			}
-		},
-		"/users/profile": {
-			"get": {
-				"operationId": "GetJohn",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"tags": [
-					"User"
-				],
-				"security": [],
-				"parameters": []
 			}
 		}
 	},
