# server/src/controllers/user.controller.ts
@@ -1,21 +1,23 @@
-import {Route,Post,Request, Controller, Get, Body, Tags} from "tsoa";
+import { Route, Post, Request, Controller, Get, Body, Tags } from "tsoa";
 import express from "express";
-import UserService from "src/services/user.service";
+import UserService from "../services/user.service";
 
-    
+
 
 @Route("users")
 @Tags("User")
-export class UserController extends Controller{
-
-    @Post("/user")
-    async registerUser(@Request() req:express.Request, @Body() body:any){
-       const data = await UserService.registerNewUser(body);
-
-       return data;
-    }
+class UserController extends Controller {
     @Get("profile")
-    async getJohn(){
+    async getJohn() {
         return UserService.getJohn();
     }
+    @Post("/user")
+    async registerUser(@Request() req: express.Request, @Body() body: any) {
+        const data = await UserService.registerNewUser(body);
+
+        return data;
+    }
+
 }
+
+export { UserController };
